# spiderfoot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.full  pyproject.toml  requirements-py312.txt  requirements.txt  seed_admin.py  sf.py  sfcli.py  sflib.py  sfscan.py  sfwebui.py
.github/workflows/: tests.yaml
spiderfoot/: auth.py  db.py
spiderfoot/static/css/: dark.css  spiderfoot.css
spiderfoot/templates/: FOOTER.tmpl  HEADER.tmpl  landing.tmpl  login.tmpl  newscan.tmpl  opts.tmpl  privacy.tmpl  scaninfo.tmpl  terms.tmpl
