[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderfoot"
version = "4.0"
description = "SpiderFoot: Open Source Intelligence Automation"
readme = "README.md"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.8"
dependencies = [
    "adblockparser>=0.7,<1",
    "dnspython>=2.1.0,<3",
    "ExifRead>=2.3.2,<3",
    "CherryPy>=18.6.1,<19",
    "cherrypy-cors>=1.6,<2",
    "Mako>=1.1.5,<2",
    "beautifulsoup4>=4.10.0,<5",
    "lxml>=4.6.3,<5",
    "netaddr>=0.8.0,<1",
    "pysocks>=1.7.1,<2",
    "requests>=2.26.0,<3",
    "ipwhois>=1.1.0,<2",
    "ipaddr>=2.2.0,<3",
    "phonenumbers>=8.12.34,<9",
    "pygexf>=0.2.2,<0.3",
    "PyPDF2>=1.26.0,<2",
    "python-whois>=0.7.3,<1",
    "secure>=0.3.0,<1",
    "pyOpenSSL>=21.0.0",
    "python-docx>=0.8.11,<1",
    "python-pptx>=0.6.21,<1",
    "networkx>=2.6.3,<4",
    "cryptography>=3.4.8",
    "publicsuffixlist>=0.7.9,<1",
    "openpyxl>=3.0.9,<4",
    "pyyaml>=5.4.1",
]

[project.scripts]
sf = "sf:main"
sfcli = "sfcli:main"

[tool.setuptools]
py-modules = ["sf", "sfcli", "sflib", "sfscan", "sfwebui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["spiderfoot*"]
